# screamsiem

./: .env.example  .gitignore  DEMO.md  LICENSE  Makefile  README.md  SECURITY.md  SUBMISSION.md  pyproject.toml
cloudflare/installer-worker/: README.md  package.json  wrangler.jsonc
cloudflare/installer-worker/src/: index.ts
installers/: demo.sh  monitored.sh  siem.sh
scripts/: demo.sh  demo_attack.sh  wait_for_ready.py
src/screamsiem/: __init__.py  cli.py  config.py  database.py  events.py  models.py  server.py
src/screamsiem/api/: __init__.py  actions.py  findings.py  hosts.py  internal.py  stream.py
src/screamsiem/approvals/: __init__.py  executor.py  service.py  tokens.py
src/screamsiem/baselines/: __init__.py  service.py
src/screamsiem/bridges/: __init__.py  bridge_main.py  mcp_server.py  port_allocator.py  supervisor.py
src/screamsiem/collectors/: __init__.py  base.py  file_tail.py  journal.py  metrics.py  processes.py  services.py  sockets.py
src/screamsiem/detections/: engine.py  privileged_user.py
src/screamsiem/investigator/: __init__.py  codex.py  gpt56.py  mcp_adapter.py  prompts.py  schemas.py
src/screamsiem/parsers/: __init__.py  journal.py  passwd.py  ps.py  ss.py
src/screamsiem/ssh/: __init__.py  asyncssh_transport.py  base.py  fake_transport.py
src/screamsiem/static/: app.css  app.js
src/screamsiem/templates/: dashboard.html
tests/e2e/: test_smoke.py
tests/integration/: test_approval.py  test_bridge.py
tests/unit/: test_cli.py  test_codex.py  test_detectors.py  test_parsers.py  test_security.py
